modificados test,login y register